# Dutch-Merchant

./: Cargo.toml  README.md  experiment_results.json  experiment_results_ fractional_lp.json  experiment_results_greedy.json  main.py  new_report.py  pyproject.toml  report_fractional_lp.md  statistical_test_report.md  statistical_test_report_ fractional_lp.md  statistical_test_report_fractional_lp.md  statistical_test_report_intervals.md  visualize_convergence.py
.github/workflows/: rust.yml  test.yml
dm-solution/: Cargo.toml
dm-solution/src/: lib.rs  main.rs
dm_solution/: Cargo.toml
dm_solution/src/: lib.rs
drafts/: complexity-analysis.md  general-asumptions.md  problem-formalization.md  rl_solution_design.md
report/: case_10_log.eps  case_1_log.eps  case_2_log.eps  case_3_log.eps  case_4_log.eps  case_5_log.eps  case_6_log.eps  case_7_log.eps  case_8_log.eps  case_9_log.eps  references.bib  report.tex
results/: experiment_results_intervals.json  report_greedy.md  report_intervals.md  statistical_test_report_greedy.md
results/logs/: case_10_log.json  case_1_log.json  case_2_log.json  case_3_log.json  case_4_log.json  case_5_log.json  case_6_log.json  case_7_log.json  case_8_log.json  case_9_log.json
rl_model/: README.md  agent.py  pyproject.toml  schemas.py  scoring.py  solver.py  train.py
rl_model/tests/: test_scoring.py
src/: lib.rs  main.rs
src/evaluator/: mod.rs  path_evaluator.rs  python_integration.rs
src/generator/: helpers.rs  mod.rs  random.rs
src/model/: instance.rs  mod.rs  solution.rs  state.rs
src/solver/: brute_force.rs  mod.rs
(+45 files in other folders)
