[package]
name = "dm-solution"
version = "0.1.0"
edition = "2024"

[lib]
name = "dm_solution"
crate-type = ["cdylib", "rlib"]

[dependencies]
minilp = "0.2"
pyo3 = { version = "0.27.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[features]
default = []
python = ["pyo3", "pyo3/extension-module"]
