[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "dm_solution"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=2.3.5", "pydantic>=2.12.5", "torch>=2.9.1"]
version = "0.1.0"
readme = "README.md"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "**/*.rs" },
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
